Updated for ReflectInsight 5.5 assembly

--- a/src/ReflectSoftware.Insight.Extensions.Log4net 4.5.csproj
+++ b/src/ReflectSoftware.Insight.Extensions.Log4net 4.5.csproj
@@ -45,7 +45,7 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>none</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Build\Libraries\NET4.5\</OutputPath>
+    <OutputPath>..\Build\Libraries\net45\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -56,7 +56,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Build\Libraries\NET4.5\</OutputPath>
+    <OutputPath>..\Build\Libraries\net45\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
