--- a/src/packages.config
+++ b/src/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
-  <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net35" />
+  <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net35" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="ReflectSoftware.Insight" version="5.5.0" targetFramework="net35" />
   <package id="ReflectSoftware.Insight" version="5.5.0" targetFramework="net40" />
   <package id="ReflectSoftware.Insight" version="5.5.0" targetFramework="net45" />
-  <package id="ReflectSoftware.Insight" version="5.5.0" targetFramework="net35" />
 </packages>
