--- a/src/packages.config
+++ b/src/packages.config
@@ -3,10 +3,10 @@
   <package id="log4net" version="2.0.3" targetFramework="net35" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net35" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="ReflectSoftware.Insight" version="5.5.0" targetFramework="net35" />
-  <package id="ReflectSoftware.Insight" version="5.5.0" targetFramework="net40" />
-  <package id="ReflectSoftware.Insight" version="5.5.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net35" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="ReflectSoftware.Insight" version="5.5.1-rc" targetFramework="net35" />
+  <package id="ReflectSoftware.Insight" version="5.5.1-rc" targetFramework="net40" />
+  <package id="ReflectSoftware.Insight" version="5.5.1-rc" targetFramework="net45" />
 </packages>
