CI changes for appveyor

--- a/src/ReflectSoftware.Insight.Extensions.Log4net 2.0.csproj
+++ b/src/ReflectSoftware.Insight.Extensions.Log4net 2.0.csproj
@@ -72,6 +72,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="RabbitMQ.Client, Version=3.4.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
+      <HintPath>..\packages\RabbitMQ.Client.3.4.0\lib\net35\RabbitMQ.Client.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="ReflectSoftware.Insight">
       <HintPath>..\packages\ReflectSoftware.Insight.5.5.1-test2\lib\net20\ReflectSoftware.Insight.dll</HintPath>
     </Reference>
