--- a/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
+++ b/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
     <metadata>
         <id>ReflectSoftware.Insight.Extensions.Log4net</id>
-        <version>5.5.2</version>
+        <version>$version$</version>
         <title>ReflectSoftware.Insight.Extensions.Log4net</title>
         <authors>ReflectSoftware Inc.</authors>
         <owners>ReflectSoftware Inc.</owners>
@@ -22,7 +22,7 @@ You can view your log4net messages in realtime, in a rich viewer that allows you
 
 As of version 5.1 of the ReflectInsight NuGet Package, you are now required to manually add in the ReflectInsight configuration details that you may require. 
 
-For help on configuration, please see our documentation on the website (https://insightextensions.codeplex.com/wikipage?title=Getting%20Started%20with%20Log4net%20Extension&amp;referringTitle=Documentation) and/or the knowledge base articles on our UserVoice site (http://reflectsoftware.uservoice.com/knowledgebase).</releaseNotes>
+For help on configuration, please see our documentation on the website (https://reflectsoftware.atlassian.net/wiki/display/RI5/ReflectInsight+5+documentation) and/or the knowledge base articles on our UserVoice site (http://reflectsoftware.uservoice.com/knowledgebase).</releaseNotes>
         <copyright>© 2015 ReflectSoftware Inc.</copyright>
         <tags>Log4net Logging Extensions ReflectInsight Appender Log Tracing RabbitMQ</tags>
         <dependencies>
