--- a/src/ReflectSoftware.Insight.Extensions.Log4net 4.0.csproj
+++ b/src/ReflectSoftware.Insight.Extensions.Log4net 4.0.csproj
@@ -76,7 +76,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="ReflectSoftware.Insight">
-      <HintPath>..\packages\ReflectSoftware.Insight.5.5.1-test2\lib\net40\ReflectSoftware.Insight.dll</HintPath>
+      <HintPath>..\packages\ReflectSoftware.Insight.5.5.1\lib\net40\ReflectSoftware.Insight.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
