--- a/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
+++ b/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
@@ -6,8 +6,8 @@
         <title>ReflectSoftware.Insight.Extensions.Log4net</title>
         <authors>ReflectSoftware Inc.</authors>
         <owners>ReflectSoftware Inc.</owners>
-        <licenseUrl>http://insightextensions.codeplex.com/license</licenseUrl>
-        <projectUrl>http://insightextensions.codeplex.com</projectUrl>
+        <licenseUrl>https://github.com/reflectsoftware/reflectinsight-extensions-log4net/blob/master/LICENSE.md</licenseUrl>
+        <projectUrl>https://github.com/reflectsoftware/reflectinsight-extensions-log4net</projectUrl>
         <iconUrl>http://reflectsoftware.com/images/ri_logo_green.ico</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>We've added support for the Log4net appender. This allows you to leverage your current investment in log4net, but leverage the power and flexibility that comes with the ReflectInsight viewer.
@@ -18,13 +18,9 @@ http://www.ReflectSoftware.com/Public/Download.aspx
 
 You can view your log4net messages in realtime, in a rich viewer that allows you to filter out and search for what really matters to you.</description>
         <summary>ReflectInsight Log4net logging extention makes it easy to integrate ReflectInsight into your existing application logging infrastructure and leverage the power of the ReflectInsight log viewer.</summary>
-        <releaseNotes>The log4net extension supports Log4net v2.0.3. However if you need to support an older version, then you will need to download the ReflectInsight Logging Extensions Library from CodePlex. You can then reference and rebuild the extension against a specific release of the log4net dll.
-
-As of version 5.1 of the ReflectInsight NuGet Package, you are now required to manually add in the ReflectInsight configuration details that you may require. 
-
-For help on configuration, please see our documentation on the website (https://reflectsoftware.atlassian.net/wiki/display/RI5/ReflectInsight+5+documentation) and/or the knowledge base articles on our UserVoice site (http://reflectsoftware.uservoice.com/knowledgebase).</releaseNotes>
+        <releaseNotes></releaseNotes>
         <copyright>© 2015 ReflectSoftware Inc.</copyright>
-        <tags>Log4net Logging Extensions ReflectInsight Appender Log Tracing RabbitMQ</tags>
+        <tags>logging log tracing logfiles Log4net Logging Extensions ReflectInsight Appender RabbitMQ</tags>
         <dependencies>
             <dependency id="log4net" version="2.0.3" />
             <dependency id="ReflectSoftware.Insight" version="5.5.1" />
