--- a/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
+++ b/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
@@ -20,7 +20,7 @@ You can view your log4net messages in realtime, in a rich viewer that allows you
         <summary>ReflectInsight Log4net logging extention makes it easy to integrate ReflectInsight into your existing application logging infrastructure and leverage the power of the ReflectInsight log viewer.</summary>
         <releaseNotes></releaseNotes>
         <copyright>© 2015 ReflectSoftware Inc.</copyright>
-        <tags>logging log tracing logfiles Log4net Logging Extensions ReflectInsight Appender RabbitMQ</tags>
+        <tags>reflectinsight logging log logfiles events log4net exception handling structured tracing trace debug diagnostic</tags>
         <dependencies>
             <dependency id="log4net" version="2.0.3" />
             <dependency id="ReflectSoftware.Insight" version="5.5.1" />
