--- a/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
+++ b/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
@@ -8,7 +8,7 @@
         <owners>ReflectSoftware Inc.</owners>
         <licenseUrl>https://github.com/reflectsoftware/reflectinsight-extensions-log4net/blob/master/LICENSE.md</licenseUrl>
         <projectUrl>https://github.com/reflectsoftware/reflectinsight-extensions-log4net</projectUrl>
-        <iconUrl>http://reflectsoftware.com/images/ri_logo_green.ico</iconUrl>
+        <iconUrl>http://reflectsoftware.com/images/ReflectInsight-Element-256.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>We've added support for the Log4net appender. This allows you to leverage your current investment in log4net, but leverage the power and flexibility that comes with the ReflectInsight viewer.
 
