--- a/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
+++ b/src/ReflectSoftware.Insight.Extensions.Log4net.nuspec
@@ -12,27 +12,26 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>We've added support for the Log4net appender. This allows you to leverage your current investment in log4net, but leverage the power and flexibility that comes with the ReflectInsight viewer.
 
-In order to use this extension you must have the ReflectInsight Viewer installed. Download and install the ReflectInsight Viewer from this location: 
+In order to use this extension you must have the ReflectInsight Viewer installed. Download and install the ReflectInsight Viewer from this location:
 
 http://www.ReflectSoftware.com/Public/Download.aspx
 
 You can view your log4net messages in realtime, in a rich viewer that allows you to filter out and search for what really matters to you.</description>
         <summary>ReflectInsight Log4net logging extention makes it easy to integrate ReflectInsight into your existing application logging infrastructure and leverage the power of the ReflectInsight log viewer.</summary>
         <releaseNotes></releaseNotes>
-        <copyright>© 2015 ReflectSoftware Inc.</copyright>
+        <copyright>© 2016 ReflectSoftware Inc.</copyright>
         <tags>reflectinsight logging log logfiles events log4net exception handling structured tracing trace debug diagnostic</tags>
         <dependencies>
-            <dependency id="log4net" version="2.0.3" />
-            <dependency id="ReflectSoftware.Insight" version="5.5.1" />
+            <dependency id="log4net" version="2.0.5" />
+            <dependency id="ReflectSoftware.Insight" version="5.6.0" />
         </dependencies>
         <references>
             <reference file="ReflectSoftware.Insight.Extensions.Log4net.dll" />
         </references>
     </metadata>
     <files>
-        <file src="bin\release\net20\ReflectSoftware.Insight.Extensions.Log4net.dll" target="lib\net20\ReflectSoftware.Insight.Extensions.Log4net.dll" />
-        <file src="bin\release\net40\ReflectSoftware.Insight.Extensions.Log4net.dll" target="lib\net40\ReflectSoftware.Insight.Extensions.Log4net.dll" />
+        <!--<file src="bin\release\net20\ReflectSoftware.Insight.Extensions.Log4net.dll" target="lib\net20\ReflectSoftware.Insight.Extensions.Log4net.dll" />
+        <file src="bin\release\net40\ReflectSoftware.Insight.Extensions.Log4net.dll" target="lib\net40\ReflectSoftware.Insight.Extensions.Log4net.dll" />-->
         <file src="bin\release\net45\ReflectSoftware.Insight.Extensions.Log4net.dll" target="lib\net45\ReflectSoftware.Insight.Extensions.Log4net.dll" />
-        <file src="readme.txt" target="readme.txt" />
     </files>
 </package>
